--- a/projects/finding-donors/.vscode/settings.json
+++ b/projects/finding-donors/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#223033",
         "titleBar.activeBackground": "#304347",
         "titleBar.activeForeground": "#F9FAFB"
-    }
+    },
+    "python.formatting.provider": "black"
 }
